--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0-168.0.dev <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,8 +29,6 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
-  freezed: ^0.12.7
-  freezed_annotation: ^0.12.0
   firebase_auth: ^3.3.10
   firebase_core: ^1.13.1
   flow_builder: ^0.0.6
@@ -38,12 +36,15 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.0.1
   flutterfire_ui: ^0.3.6
-  freezed: ^1.1.1
+  freezed_annotation: ^1.1.0
+  json_annotation: ^4.4.0
 
 dev_dependencies:
-  flutter_lints: ^1.0.0
   build_runner: ^2.1.7
-  
+
+  flutter_lints: ^1.0.0
+  freezed: ^1.1.1
+  json_serializable: ^6.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
